--- a/motion/pubspec.yaml
+++ b/motion/pubspec.yaml
@@ -1,9 +1,9 @@
-name: motion
+name: motion_v2
 description: A fancy widget that applies a gyroscope or hover based motion effect to its child.
-version: 1.3.2
-homepage: https://cendre.me
-repository: https://github.com/mrcendre/motion
-issue_tracker: https://github.com/mrcendre/motion/issues?q=is%3Aissue+is%3Aopen
+version: 1.3.2+1
+homepage: https://mohesu.com
+repository: https://github.com/rvndsngwn/motion
+issue_tracker: https://github.com/rvndsngwn/motion/issues?q=is%3Aissue+is%3Aopen
 
 flutter:
   plugin:
@@ -24,10 +24,10 @@ dependencies:
   flutter:
     sdk: flutter
 
-  motion_web: ^1.3.2
-  motion_platform_interface: ^1.3.2
+  motion_web: ^1.3.3
+  motion_platform_interface: ^1.3.3
   
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^1.0.2
+  flutter_lints: ^2.0.1
